--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Secure Phonebook</string>
+    <string name="title_activity_add_new">AddNewActivity</string>
+    <string name="title_activity_all">AllActivity</string>
+    <string name="title_activity_add">AddActivity</string>
 </resources>
