--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_add_new">AddNewActivity</string>
     <string name="title_activity_all">AllActivity</string>
     <string name="title_activity_add">AddActivity</string>
+    <string name="title_activity_contacts">ContactsActivity</string>
 </resources>
